[package]
name = "sweat"
version = "0.1.0"
authors = []
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = {git = "https://github.com/jakmeier/near-sdk-rs", branch = "ft-contract-hashed-lookup-map"}
near-contract-standards = {git = "https://github.com/jakmeier/near-sdk-rs", branch = "ft-contract-hashed-lookup-map"}
static_assertions = "1.1.0"